k8s/04-content-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
  namespace: azilehub

  labels:
    app: content-service

spec:

  replicas: 2

  selector:
    matchLabels:
      app: content-service

  template:

    metadata:
      labels:
        app: content-service

    spec:

      containers:

        - name: content-service

          image: zainul1114/azilehub-content:1.0.1

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 8000
              name: http

          readinessProbe:

            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:

            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 20

          resources:

            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: content-service
  namespace: azilehub

  labels:
    app: content-service

spec:

  type: ClusterIP

  selector:
    app: content-service

  ports:

    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
