k8s/06-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: azilehub

  labels:
    app: frontend

spec:

  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

        - name: frontend
          image: zainul1114/azilehub-frontend:1.0.6
          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 8080
              name: http

          readinessProbe:

            httpGet:
              path: /
              port: 8080

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:

            httpGet:
              path: /
              port: 8080

            initialDelaySeconds: 15
            periodSeconds: 20

          resources:

            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: azilehub

  labels:
    app: frontend

spec:

  type: ClusterIP

  selector:
    app: frontend

  ports:

    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
