k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azilehub-ingress
  namespace: azilehub

  annotations:

    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"

    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"

    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"

spec:

  ingressClassName: nginx

  rules:

    - host: azilehub.local

      http:

        paths:

          - path: /api/tutorials
            pathType: Prefix

            backend:

              service:
                name: content-service
                port:
                  number: 8000

          - path: /api/contact
            pathType: Prefix

            backend:

              service:
                name: contact-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix

            backend:

              service:
                name: frontend
                port:
                  number: 8080
